# dev-header

./: Cargo.toml  README.md  config.json  template.json
src/: config.rs  lib.rs  main.rs  template.rs
src/commands/: apply.rs  default.rs  delete.rs  edit.rs  get.rs  list.rs  mod.rs  new.rs
src/core/: header.rs  mod.rs  storage.rs  template.rs
src/data/: data.json
