[package]
name = "dev-header"
version = "0.1.0"
edition = "2024"

[dependencies]
arboard = "3.6.1"
clap = { version = "4.5.46", features = ["derive"] }
console = "0.16.0"
dialoguer = "0.12.0"
directories = "6.0.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"

[[bin]]
name = "header"
path = "src/main.rs"
